--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -26,7 +26,8 @@ jobs:
           #cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Run ESLint with annotations
         run: |
@@ -61,10 +62,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+         
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Run npm audit
         run: |
@@ -107,10 +109,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+        
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Check file naming conventions
         run: |
@@ -150,10 +153,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Run tests with coverage
         run: npm test -- --coverage --coverageReporters=json --coverageReporters=lcov
