--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -97,7 +97,8 @@ jobs:
           #cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Run tests
         run: npm test
@@ -136,10 +137,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+         
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Build for analysis
         run: npm run build
