--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,7 +36,8 @@ jobs:
           #cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Install documentation tools
         run: |
