--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -62,7 +62,8 @@ jobs:
           #cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Clean old build artifacts
         run: |
