--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          #cache: 'npm'
+         node-version: [18.x, 20.x, 22.x]
+          cache: 'npm'
 
       - name: Install npm-check-updates
         run: npm install -g npm-check-updates
@@ -62,7 +62,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: [18.x, 20.x, 22.x]
          
 
       - name: Install npm-check-updates
@@ -114,7 +114,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+         node-version: [18.x, 20.x, 22.x]
          
 
       - name: Run npm audit fix
