--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          #cache: 'npm'
+          node-version: [18.x, 20.x, 22.x]
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm install
