--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: [18.x, 20.x, 22.x]
 
       - name: Create backup timestamp
         id: timestamp
@@ -58,8 +58,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          #cache: 'npm'
+          node-version: [18.x, 20.x, 22.x]
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm install
