--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18.x, 20.x, 22.x]
+         node-version: [18, 20, 22]
           cache: 'npm'
 
       - name: Install dependencies
@@ -61,7 +61,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18.x, 20.x, 22.x]
+          node-version: [18, 20, 22]
          
 
       - name: Install dependencies
@@ -108,7 +108,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [18, 20, 22]
         
 
       - name: Install dependencies
@@ -152,7 +152,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18.x, 20.x, 22.x]
+         node-version: [18, 20, 22]
           
 
       - name: Install dependencies
