--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18.x, 20.x, 22.x]
+         node-version: [18, 20, 22]
 
       - name: Create backup timestamp
         id: timestamp
@@ -58,7 +58,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18.x, 20.x, 22.x]
+          node-version: [18, 20, 22]
           cache: 'npm'
 
       - name: Install dependencies
