--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: [18, 20, 22]
-         
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm install
@@ -108,7 +108,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-        node-version: [18, 20, 22]
+          node-version: [18, 20, 22]
+          cache: 'npm'
         
 
       - name: Install dependencies
@@ -153,7 +154,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
          node-version: [18, 20, 22]
-          
+         cache: 'npm' 
 
       - name: Install dependencies
         run: npm install
