--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
 
       - name: Get current version
@@ -94,12 +94,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm ci
 
       - name: Run tests
         run: npm test
@@ -122,7 +121,7 @@ jobs:
           cat checksums.txt
 
       - name: Upload release assets
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: release-assets
           path: release/
@@ -137,12 +136,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm ci
 
       - name: Build for analysis
         run: npm run build
@@ -153,11 +151,6 @@ jobs:
           echo "Analyzing bundle size..."
           du -sh dist/* > bundle-size.txt
           cat bundle-size.txt
-
-      - name: Lighthouse CI
-        run: |
-          npm install -g @lhci/cli
-          lhci autorun || echo "Lighthouse scan completed"
 
       - name: Generate performance report
         run: |
@@ -177,7 +170,7 @@ jobs:
           EOF
 
       - name: Upload performance report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: performance-report
           path: performance-report.md
@@ -189,18 +182,18 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Download changelog
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: changelog
 
       - name: Download release assets
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: release-assets
           path: release/
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           body_path: CHANGELOG.md
           files: |
@@ -213,7 +206,7 @@ jobs:
 
       - name: Release summary
         run: |
-          echo " Release ${{ needs.generate-changelog.outputs.version }} created successfully"
+          echo "Release ${{ needs.generate-changelog.outputs.version }} created successfully"
           echo "View release at: https://github.com/${{ github.repository }}/releases/tag/${{ needs.generate-changelog.outputs.version }}"
 
   analytics:
@@ -228,8 +221,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
+
       - name: Collect repository metrics
         run: |
           echo "# Project Analytics Report" > analytics.md
@@ -258,7 +252,7 @@ jobs:
           cr --format plain src/ >> analytics.md || echo "Complexity analysis completed"
 
       - name: Upload analytics report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: project-analytics
           path: analytics.md
@@ -271,6 +265,7 @@ jobs:
     steps:
       - name: Notification summary
         run: |
-          echo " Release workflow completed"
+          echo "Release workflow completed"
           echo "Status: ${{ needs.create-release.result }}"
           echo "Version: ${{ needs.generate-changelog.outputs.version }}"
+          
