--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,11 @@ name: Deployment Pipeline
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: '22'
 
 jobs:
   build:
@@ -19,12 +19,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-         node-version: [18, 20, 22]
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm ci
 
       - name: Run tests
         run: npm test
@@ -53,7 +52,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: production-build
           path: dist/
@@ -68,7 +67,7 @@ jobs:
 
       - name: Notify deployment status
         run: |
-          echo " Staging deployment successful"
+          echo "Staging deployment successful"
           echo "URL: https://staging.heavens-above.app"
 
   test-staging:
@@ -99,7 +98,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: production-build
           path: dist/
@@ -119,7 +118,7 @@ jobs:
 
       - name: Notify deployment success
         run: |
-          echo " Production deployment successful"
+          echo "Production deployment successful"
           echo "URL: https://heavens-above.app"
           echo "Commit: ${{ github.sha }}"
 
@@ -136,7 +135,7 @@ jobs:
 
       - name: Rollback to previous version
         run: |
-          echo " Deployment failed. Initiating rollback..."
+          echo "Deployment failed. Initiating rollback..."
           git checkout HEAD~1
           
       - name: Notify team
