--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation Deployment
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
       - 'docs/**'
       - 'README.md'
@@ -32,12 +32,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-         node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm ci
 
       - name: Install documentation tools
         run: |
@@ -151,22 +150,22 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download documentation artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: documentation
           path: docs/build/
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
 
       - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: docs/build/
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v3
 
       - name: Deployment summary
         run: |
