--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -2,9 +2,7 @@ name: Scheduled Tasks
 
 on:
   schedule:
-    # Run daily at 2 AM UTC
     - cron: '0 2 * * *'
-    # Run weekly on Sunday at 3 AM UTC
     - cron: '0 3 * * 0'
   workflow_dispatch:
 
@@ -20,8 +18,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-         node-version: [18, 20, 22]
-         cache: 'npm'
+          node-version: '22'
+          cache: 'npm'
+
       - name: Create backup timestamp
         id: timestamp
         run: echo "date=$(date +'%Y%m%d_%H%M%S')" >> $GITHUB_OUTPUT
@@ -44,7 +43,7 @@ jobs:
 
       - name: Backup notification
         run: |
-          echo " Daily backup completed successfully"
+          echo "Daily backup completed successfully"
           echo "Backup date: ${{ steps.timestamp.outputs.date }}"
 
   weekly-maintenance:
@@ -58,12 +57,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: [18, 20, 22]
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
+        run: npm ci
 
       - name: Clean old build artifacts
         run: |
@@ -74,7 +72,6 @@ jobs:
       - name: Update astronomy data cache
         run: |
           echo "Updating astronomy data..."
-          # Simulate updating celestial data
           mkdir -p data
           echo "Last updated: $(date)" > data/last_update.txt
           echo "Astronomy data updated"
@@ -96,11 +93,11 @@ jobs:
           echo "- Ran dependency security audit" >> maintenance-report.md
           echo "" >> maintenance-report.md
           echo "## System Status" >> maintenance-report.md
-          echo "- Repository: Healthy " >> maintenance-report.md
-          echo "- Dependencies: Up to date " >> maintenance-report.md
+          echo "- Repository: Healthy" >> maintenance-report.md
+          echo "- Dependencies: Up to date" >> maintenance-report.md
 
       - name: Upload maintenance report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: maintenance-report-${{ github.run_number }}
           path: |
@@ -133,5 +130,5 @@ jobs:
 
       - name: Send status notification
         run: |
-          echo " Health check completed at $(date)"
-          echo "All systems operational "
+          echo "Health check completed at $(date)"
+          echo "All systems operational"
