fix node version x 5

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -43,7 +43,7 @@ jobs:
           cr --format json src/ > complexity-report.json || true
 
       - name: Upload code quality reports
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: code-quality-reports
           path: |
@@ -79,13 +79,22 @@ jobs:
         with:
           args: --severity-threshold=high --json-file-output=snyk-report.json
 
+      - name: OWASP Dependency Check
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: 'heavens-above'
+          path: '.'
+          format: 'HTML'
+        continue-on-error: true
+
       - name: Upload security reports
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: security-scan-reports
           path: |
             npm-audit.json
             snyk-report.json
+            reports/
 
   coding-standards:
     name: Coding Standards Check
@@ -125,7 +134,7 @@ jobs:
           plato -r -d reports/plato src/ || true
 
       - name: Upload standards report
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: coding-standards-report
           path: reports/
@@ -151,12 +160,12 @@ jobs:
 
       - name: Coverage threshold check
         run: |
-          COVERAGE=$(node -p "require('./coverage/coverage-summary.json').total.lines.pct")
+          COVERAGE=$(cat coverage/coverage-summary.json | jq '.total.lines.pct')
           echo "Current coverage: $COVERAGE%"
-          if [ $(echo "$COVERAGE < 70" | bc) -eq 1 ]; then
-            echo "Warning: Coverage below 70%"
+          if (( $(echo "$COVERAGE < 70" | bc -l) )); then
+            echo "⚠️ Warning: Coverage below 70%"
           else
-            echo "Coverage meets threshold"
+            echo "✅ Coverage meets threshold"
           fi
 
       - name: Upload coverage to Codecov
@@ -165,6 +174,12 @@ jobs:
           file: ./coverage/lcov.info
           flags: pr-tests
           name: pr-coverage
+
+      - name: Comment coverage on PR
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          lcov-file: ./coverage/lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   pr-size-check:
     name: Pull Request Size Check
@@ -184,9 +199,9 @@ jobs:
           echo "Lines changed: $LINES_CHANGED"
           
           if [ "$FILES_CHANGED" -gt 20 ] || [ "$LINES_CHANGED" -gt 500 ]; then
-            echo "Large PR detected. Consider breaking it down."
+            echo "⚠️ Large PR detected. Consider breaking it down."
           else
-            echo "PR size is reasonable"
+            echo "✅ PR size is reasonable"
           fi
 
   review-summary:
