--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deployment Pipeline
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main, master ]
   workflow_dispatch:
 
 env:
@@ -34,7 +34,7 @@ jobs:
           NODE_ENV: production
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: production-build
           path: dist/
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: production-build
           path: dist/
@@ -67,7 +67,7 @@ jobs:
 
       - name: Notify deployment status
         run: |
-          echo "Staging deployment successful"
+          echo "✅ Staging deployment successful"
           echo "URL: https://staging.heavens-above.app"
 
   test-staging:
@@ -98,7 +98,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: production-build
           path: dist/
@@ -118,7 +118,7 @@ jobs:
 
       - name: Notify deployment success
         run: |
-          echo "Production deployment successful"
+          echo "🚀 Production deployment successful"
           echo "URL: https://heavens-above.app"
           echo "Commit: ${{ github.sha }}"
 
@@ -135,7 +135,7 @@ jobs:
 
       - name: Rollback to previous version
         run: |
-          echo "Deployment failed. Initiating rollback..."
+          echo "⚠️ Deployment failed. Initiating rollback..."
           git checkout HEAD~1
           
       - name: Notify team
