--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation Deployment
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main, master ]
     paths:
       - 'docs/**'
       - 'README.md'
@@ -128,10 +128,10 @@ jobs:
         run: |
           echo "Validating documentation structure..."
           test -f docs/build/index.html || exit 1
-          echo "Documentation structure valid"
+          echo "✅ Documentation structure valid"
 
       - name: Upload documentation artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: documentation
           path: docs/build/
@@ -150,26 +150,26 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download documentation artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: documentation
           path: docs/build/
 
       - name: Setup Pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v3
 
       - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v2
         with:
           path: docs/build/
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v2
 
       - name: Deployment summary
         run: |
-          echo "Documentation deployed successfully"
+          echo "📚 Documentation deployed successfully"
           echo "URL: ${{ steps.deployment.outputs.page_url }}"
           echo "Commit: ${{ github.sha }}"
 
