--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,28 +7,6 @@ on:
     branches: [main, master]
 
 jobs:
-  lint:
-    name: Code Linting
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0 || echo "ESLint completed"
-
-      - name: Run Prettier check
-        run: npx prettier --check "**/*.{js,jsx,ts,tsx,json,css,md}" || echo "Prettier check completed"
-
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -40,24 +18,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-       
 
       - name: Install dependencies
         run: npm install
 
       - name: Run unit tests
-        run: npm test -- --coverage || echo "Tests completed"
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v3
-        with:
-          flags: unittests
-          name: codecov-umbrella
+        run: npm test
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -66,18 +37,26 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-     
 
       - name: Install dependencies
         run: npm install
 
       - name: Build project
-        run: npm run build || echo "Build completed"
+        run: npm run build
+
+      - name: List build directory
+        run: ls -la dist/ || echo "No dist directory yet"
+
+      - name: Create build artifacts
+        run: |
+          mkdir -p dist
+          echo "Build created at: $(date)" > dist/build-info.txt
+          echo "Commit: ${{ github.sha }}" >> dist/build-info.txt
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifacts
+          name: production-build
           path: dist/
           retention-days: 7
 
@@ -99,14 +78,12 @@ jobs:
   status-check:
     name: CI Status Check
     runs-on: ubuntu-latest
-    needs: [lint, test, build, security-scan]
+    needs: [test, build, security-scan]
     if: always()
     steps:
       - name: Check CI status
         run: |
-          if [ "${{ needs.lint.result }}" == "failure" ] || \
-             [ "${{ needs.test.result }}" == "failure" ] || \
-             [ "${{ needs.build.result }}" == "failure" ]; then
+          if [ "${{ needs.test.result }}" == "failure" ] || [ "${{ needs.build.result }}" == "failure" ]; then
             echo "❌ CI checks failed"
             exit 1
           else
